data generation script

--- a/scripts/analyze_data.ipynb
+++ b/scripts/analyze_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -10,8 +10,16 @@
      "output_type": "stream",
      "text": [
       "number of images: 1007\n",
+      "E93E.png\n",
+      "D780.png\n",
+      "9B07.png\n",
+      "B20EB0.png\n",
+      "E1AEEF.png\n",
+      "ec5f.png\n",
+      "27AA.png\n",
+      "5A4B.png\n",
       "{4: 6, 5: 999, 6: 2}\n",
-      "{'F': 325, 'D': 304, '6': 311, 'A': 338, '3': 300, '2': 326, '0': 250, 'O': 17, 'Q': 1, 'L': 1, 'G': 3, '4': 300, '8': 336, 'P': 1, '7': 315, '1': 336, '9': 334, 'E': 324, 'C': 299, 'B': 305, 'S': 1, '5': 304}\n"
+      "{'4': 300, 'S': 1, 'E': 324, '8': 336, 'G': 3, 'D': 304, 'O': 17, '7': 315, 'L': 1, 'A': 338, '3': 300, '1': 336, '2': 326, 'B': 305, '6': 311, '9': 334, 'F': 325, 'P': 1, 'C': 299, 'Q': 1, '0': 250, '5': 304}\n"
      ]
     }
    ],
@@ -45,6 +53,8 @@
     "    if a not in number_of_symbols_stat:\n",
     "        number_of_symbols_stat[a] = 0\n",
     "    number_of_symbols_stat[a] += 1\n",
+    "    if a != 5:\n",
+    "        print(imname)\n",
     "    # if not re.match('[A-Z0-8]+', imbase):\n",
     "    #     print(imname)\n",
     "    for c in imbase:\n",
